# tinybatt

./: .gitignore  CMakeLists.txt  DESCRIPTION  README  README.md
src/: CMakeLists.txt  Makefile  config.h.in  tinybatt.c  tinybatt.h
tests/fake_battery_array/power_supply/BAT0/: model_name  power_now
tests/fake_battery_array/power_supply/BAT1/: energy_now  power_now  status  voltage_now
tests/fake_battery_array/power_supply/BAT2/: energy_full  energy_now  power_now
